--- a/templates/user/profile/index.html.twig
+++ b/templates/user/profile/index.html.twig
@@ -35,6 +35,12 @@
             <div class="text-gray-700">{{ user.company.name }}</div>
         </div>
 
+        <div class="mb-4">
+            <a href="/user/logout/" class="block text-gray-700 text-sm font-bold mb-2">
+                Déconnexion
+            </a>
+        </div>
+
     </div>
 </div>
 {% endblock %}
