--- a/templates/_partials/_pdf_generate.html.twig
+++ b/templates/_partials/_pdf_generate.html.twig
@@ -62,8 +62,12 @@
         </div>
         <div class="details">
             <p><strong>Client:</strong></p>
-            <p>{{ forPdf.customer.name }}</p>
-            <p>{{ forPdf.customer.street }}, {{ forPdf.customer.city }}, {{ forPdf.customer.getZipCode() }}, {{ forPdf.customer.country }}</p>
+            {% if forPdf.customer %}
+                <p>{{ forPdf.customer.name }}</p>
+                <p>{{ forPdf.customer.street }}, {{ forPdf.customer.city }}, {{ forPdf.customer.getZipCode() }}, {{ forPdf.customer.country }}</p>
+            {% else %}
+                <p>Pas de client</p>
+            {% endif %}
         </div>
         <div class="details">
             <p><strong>Entreprise:</strong></p>
