--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -85,7 +85,7 @@
                             </div>
                         </li>
                     </a>
-					          {% if is_granted('ROLE_SUPERADMIN') or is_granted('ROLE_ADMIN') %}
+					{% if is_granted('ROLE_SUPERADMIN') or is_granted('ROLE_ADMIN') %}
                         <a href="/superadmin/archived/">
                             <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
                                 <div class="flex items-center gap-2">
@@ -109,11 +109,15 @@
                 </ul>
             </div>
         </div>
-
         <div id="content" class="flex flex-grow flex-col overflow-y-auto gap-3 p-6">
             {% if form is defined %}
                 {{ form_start(form, { 'attr': { 'class': 'flex flex-grow flex-col gap-3' } }) }}
             {% endif %}
+
+            <div id="content-header" class="w-full flex justify-between items-center">
+                {% block page_header %}<p class="text-2xl font-bold">Bienvenue</p>{% endblock %}
+            </div>
+
             <div id="content-box" class="w-full h-full flex flex-col border shadow-md rounded-lg overflow-y-auto max-h-300">
                 {% block page_content %}{% endblock %}
             </div>
