--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
     {% endblock %}
 </head>
 
+
+
 <body class="flex overflow-hidden">
     {% block initializer %}
         <div class="init w-5 h-5"></div>
@@ -104,6 +106,11 @@
             {% if form is defined %}
                 {{ form_start(form, { 'attr': { 'class': 'flex flex-grow flex-col gap-3' } }) }}
             {% endif %}
+
+            <div id="content-header" class="w-full flex justify-between items-center">
+                {% block page_header %}<p class="text-2xl font-bold">Bienvenue</p>{% endblock %}
+            </div>
+
             <div id="content-box" class="w-full h-full flex flex-col border shadow-md rounded-lg overflow-y-auto max-h-300">
                 {% block page_content %}{% endblock %}
             </div>
