--- a/templates/user/category/edit.html.twig
+++ b/templates/user/category/edit.html.twig
@@ -1,13 +1,26 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/form.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
+{% block page_title %}Modifier une catégorie de prestation - ArtBill{% endblock %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Modifier une catégorie de prestation</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+            <icon name="check" display="solid" color="white" size="4"></icon>
+            <input type="submit" value="Enregistrer">
+        </div>
+    </div>
+{% endblock %}
 
-{% block page_content %}
-    <h1>Edit Category</h1>
+{% block form %}
+    {% set fields = {
+        'label': 'Libellé',
+    } %}
 
-    {{ include('user/category/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('user_app_category_index') }}">back to list</a>
-
-    {{ include('user/category/_delete_form.html.twig') }}
+    {% for field, label in fields %}
+        <div class="w-72 flex flex-col">
+            {{ form_label(form[field], label) }}
+            {{ form_widget(form[field]) }}
+            {{ form_errors(form[field]) }}
+        </div>
+    {% endfor %}
 {% endblock %}
