revert commits inutils

--- a/templates/registration/company_user_register.html.twig
+++ b/templates/registration/company_user_register.html.twig
@@ -21,7 +21,7 @@
         <div class="mb-4">
             {{ form_row(registrationForm.plainPassword.second, {'attr': {'class': 'input', 'placeholder': 'Confirmez le mot de passe'}, 'label': 'Confirmez le mot de passe'}) }}
         </div>
-        <button type="submit" class="w-full px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg bg-blue-500 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition ease-in-out duration-150">
+        <button type="submit" class="w-full px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition ease-in-out duration-150">
             Enregistrer l'utilisateur
         </button>
     {{ form_end(registrationForm) }}
