--- a/templates/superadmin/quotation/edit.html.twig
+++ b/templates/superadmin/quotation/edit.html.twig
@@ -1,13 +1,34 @@
-{% extends 'base.html.twig' %}
+{% extends 'superadmin/default/form.html.twig' %}
 
-{% block title %}Edit Quotation{% endblock %}
+{% block page_title %}Modifier un devis - ArtBill{% endblock %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Modifier un devis</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+            <icon name="check" display="solid" color="white" size="4"></icon>
+            <input type="submit" value="Enregistrer">
+        </div>
+    </div>
+{% endblock %}
 
-{% block page_content %}
-    <h1>Edit Quotation</h1>
+{% block form %}
+    {% set fields = {
+        'description': 'Description',
+        'status': 'Statut',
+        'date': 'Date',
+        'dueDate': 'Date d\'échéance',
+        'customer': 'Client',
+    } %}
 
-    {{ include('superadmin/quotation/_form.html.twig', {'button_label': 'Update'}) }}
+    {% for field, label in fields %}
+        <div class="w-72 flex flex-col">
+            {{ form_label(form[field], label) }}
+            {{ form_widget(form[field]) }}
+            {{ form_errors(form[field]) }}
+        </div>
+    {% endfor %}
+{% endblock %}
 
-    <a class='block h-8' href="{{ path('superadmin_quotation_index') }}">Retour aux devis</a>
-
-    {{ include('superadmin/quotation/_delete_form.html.twig') }}
+{% block form_extra %}
+    {{ include('superadmin/quotation/_service_form.html.twig') }}
 {% endblock %}
