refix parce que fau bien penser a rebase avant de merge

--- a/templates/user/profile/index.html.twig
+++ b/templates/user/profile/index.html.twig
@@ -36,7 +36,7 @@
         </div>
 
         <div class="mb-4">
-            <a href="/user/logout/" class="block text-gray-700 text-sm font-bold mb-2">
+            <a href="/logout/" class="block text-gray-700 text-sm font-bold mb-2">
                 Déconnexion
             </a>
         </div>
