--- a/templates/_partials/_pdf_generate.html.twig
+++ b/templates/_partials/_pdf_generate.html.twig
@@ -10,6 +10,7 @@
             font-family: Arial, sans-serif;
             background-color: #f7fafc;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -24,11 +25,13 @@
             padding-bottom: 10px;
             margin-bottom: 20px;
         }
-        .header h1 {
+        .header span {
             margin: 0;
             color: #2d3748;
-            font-size: 24px;
+            font-size: 42px;
+            font-weight: bold;
             text-transform: uppercase;
+            margin-right: 300px;
         }
         .details {
             margin-bottom: 20px;
@@ -58,7 +61,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>{{ type|upper }}</h1>
+            <span>{{ type|upper }}</span>
+            {% if logo is defined %}
+            <img src="{{ logo }}" width="auto" height="50px" />
+            {% endif %}
         </div>
         <div class="details">
             <p><strong>Client:</strong></p>
