--- a/templates/admin/invoice/edit.html.twig
+++ b/templates/admin/invoice/edit.html.twig
@@ -18,6 +18,7 @@
         'dueDate': 'Date d\'échéance',
         'customer': 'Client',
         'services': 'Services',
+		'isPaid': 'Payé',
     } %}
 
     {% for field, label in fields %}
