--- a/templates/user/invoice/index.html.twig
+++ b/templates/user/invoice/index.html.twig
@@ -1,11 +1,63 @@
-{% extends 'base.html.twig' %}
+{% extends 'user/default/list.html.twig' %}
 
-{% block page_title %}Factures
+{% block page_title %}Factures{% endblock %}
+
+{% block page_header %}
+    <p class="text-2xl font-bold">Factures</p>
+    <div class="flex gap-3">
+        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
+        <a href="{{ path('admin_invoice_new') }}" title="Ajouter">
+            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
+                <icon name="plus" display="mini" color="white"></icon>
+            </div>
+        </a>
+    </div>
 {% endblock %}
 
-{% block page_content %}
-	<h1>Vos factures</h1>
-	{% include '_partials/_bills.index.html.twig' with {'items': invoices, 'type': "invoice"}%}
-</table>
+{% block thead %}
+    {% if invoices is not empty %}
+        <th></th>
+        <th>Description</th>
+        <th>Montant HT</th>
+        <th>Montant TTC</th>
+        <th>Statut</th>
+        <th>Date de la facture</th>
+        <th>Date d'échéance</th>
+        <th>Création</th>
+        <th></th>
+    {% else %}
+        <th class="text-center">Aucune donnée</th>
+    {% endif %}
+{% endblock %}
 
-<a href="{{ path('user_invoice_new') }}">Create new</a>{% endblock %}
+{% block tbody %}
+    {% for invoice in invoices %}
+        <tr>
+            <td class="w-10 h-12">
+                <a href="{{ path('user_invoice_show', {'id': invoice.id}) }}" title="Voir">
+                    <icon name="eye" display="solid" color="primary" size="4"></icon>
+                </a>
+            </td>
+            <td>{{ invoice.description }}</td>
+            <td>{{ invoice.amountHt }}<span class="text-xs"> €</span></td>
+            <td>{{ invoice.amountTtc }}<span class="text-xs"> €</span></td>
+            <td>{{ invoice.isPaid ? 'Payé' : 'En attente de paiement' }}</td>
+			<td>{{ invoice.date ? invoice.date|date('Y-m-d') : '' }}</td>
+			<td>{{ invoice.dueDate ? invoice.dueDate|date('Y-m-d') : '' }}</td>
+            <td>
+                {% if today == invoice.createdAt|date('Y-m-d') %}
+                    Aujourd'hui
+                {% elseif today|date_modify('-1 day')|date('Y-m-d') == invoice.createdAt|date('Y-m-d') %}
+                    Hier
+                {% else %}
+                    {{ invoice.createdAt|date('d/m/Y') }}
+                {% endif %}
+
+                à {{ invoice.createdAt|date('H') }}h{{ invoice.createdAt|date('i') }}
+            </td>
+            <td>
+
+            </td>
+        </tr>
+    {% endfor %}
+{% endblock %}
