--- a/templates/_partials/_bills.index.html.twig
+++ b/templates/_partials/_bills.index.html.twig
@@ -50,8 +50,12 @@
 				{% endif %}
 				<td class="px-3 py-2 whitespace-no-wrap">
 					{% set role_prefix = is_granted('ROLE_SUPERADMIN') ? "superadmin" : is_granted('ROLE_ADMIN') ? "admin" : "user" %}
+
 					<a href="{{ path(role_prefix ~ type ~ "_show", {'id': item.id}) }}" class="text-indigo-600 hover:text-indigo-900">Afficher</a>
-					<a href="{{ path(role_prefix ~ type ~ "_edit", {'id': item.id}) }}" class="text-indigo-600 hover:text-indigo-900">Editer</a>
+
+					{% if not is_granted('ROLE_USER') %}
+						<a href="{{ path(role_prefix ~ type ~ "_edit", {'id': item.id}) }}" class="text-indigo-600 hover:text-indigo-900">Editer</a>
+					{% endif %}
 				</td>
 			</tr>
 		{% endfor %}
