--- a/templates/admin/quotation/show.html.twig
+++ b/templates/admin/quotation/show.html.twig
@@ -23,10 +23,10 @@
     {% endfor %}
 {% endif %}
           
-<a href="{{ path('superadmin_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a>
-<a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
+<a href="{{ path('admin_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a>
+<a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
 <a href="{{ path('generate_pdf', {'id': quotation.id, 'type': 'devis'}) }}" target="_blank">Générer PDF</a>
-<a href="{{ path('superadmin_quotation_generate_invoice', {'id': quotation.id}) }}" class="btn btn-primary">Générer la facture à partir du devis</a>
+<a href="{{ path('admin_quotation_generate_invoice', {'id': quotation.id}) }}" class="btn btn-primary">Générer la facture à partir du devis</a>
 {{ include('admin/quotation/_delete_form.html.twig') }}
 
 <button id="togglePreview">Afficher la prévisualisation</button>
