--- a/templates/user/service/index.html.twig
+++ b/templates/user/service/index.html.twig
@@ -4,14 +4,6 @@
 
 {% block page_header %}
     <p class="text-2xl font-bold">Prestations</p>
-    <div class="flex gap-3">
-        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
-        <a href="{{ path('user_service_new') }}" title="Ajouter">
-            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
-                <icon name="plus" display="mini" color="white"></icon>
-            </div>
-        </a>
-    </div>
 {% endblock %}
 
 {% block thead %}
@@ -40,15 +32,15 @@
             <td>{{ service.description }}</td>
             <td>{{ service.price }}<span class="text-xs"> €</span></td>
             <td>
-                {% if today == service.created|date('Y-m-d') %}
+                {% if today == service.createdAt|date('Y-m-d') %}
                     Aujourd'hui
-                {% elseif today|date_modify('-1 day')|date('Y-m-d') == service.created|date('Y-m-d') %}
+                {% elseif today|date_modify('-1 day')|date('Y-m-d') == service.createdAt|date('Y-m-d') %}
                     Hier
                 {% else %}
-                    {{ service.created|date('d/m/Y') }}
+                    {{ service.createdAt|date('d/m/Y') }}
                 {% endif %}
 
-                à {{ service.created|date('H') }}h{{ service.created|date('i') }}
+                à {{ service.createdAt|date('H') }}h{{ service.createdAt|date('i') }}
             </td>
             <td>
                 <div class="flex items-center gap-2">
@@ -57,19 +49,6 @@
                 </div>
             </td>
             <td>
-                <div class="flex justify-end gap-3">
-                    <a href="{{ path('user_service_edit', {'id': service.id}) }}">
-                        <div class="h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md px-2.5 p-1 bg-primary text-white">
-                            <icon name="pencil" display="solid" color="white" size="4"></icon>
-                            <span>Modifier</span>
-                        </div>
-                    </a>
-                    <a href="{{ path('user_service_delete', {'id': service.id}) }}">
-                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
-                            <icon name="trash" display="solid" color="primary" size="4"></icon>
-                        </div>
-                    </a>
-                </div>
             </td>
         </tr>
     {% endfor %}
