fix routes + style continuation

--- a/templates/user/category/index.html.twig
+++ b/templates/user/category/index.html.twig
@@ -6,11 +6,6 @@
     <p class="text-2xl font-bold">Catégories de prestation</p>
     <div class="flex gap-3">
         <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
-        <a href="{{ path('admin_category_new') }}" title="Ajouter">
-            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
-                <icon name="plus" display="mini" color="white"></icon>
-            </div>
-        </a>
     </div>
 {% endblock %}
 
@@ -29,11 +24,11 @@
     {% for category in categories %}
         <tr>
             <td class="w-10 h-12">
-                <a href="{{ path('admin_category_show', {'id': category.id}) }}" title="Voir">
+                <a href="{{ path('user_category_show', {'id': category.id}) }}" title="Voir">
                     <icon name="eye" display="solid" color="primary" size="4"></icon>
                 </a>
             </td>
-            <td><a class="font-bold text-primary" href="{{ path('admin_category_show', {'id': category.id}) }}">{{ category.label }}</a></td>
+            <td><a class="font-bold text-primary" href="{{ path('user_category_show', {'id': category.id}) }}">{{ category.label }}</a></td>
             <td>
                 {% if today == category.createdAt|date('Y-m-d') %}
                     Aujourd'hui
@@ -46,19 +41,6 @@
                 à {{ category.createdAt|date('H') }}h{{ category.createdAt|date('i') }}
             </td>
             <td>
-                <div class="flex justify-end gap-3">
-                    <a href="{{ path('admin_category_edit', {'id': category.id}) }}">
-                        <div class="h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md px-2.5 p-1 bg-primary text-white">
-                            <icon name="pencil" display="solid" color="white" size="4"></icon>
-                            <span>Modifier</span>
-                        </div>
-                    </a>
-                    <a href="{{ path('admin_category_delete', {'id': category.id}) }}">
-                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
-                            <icon name="trash" display="solid" color="primary" size="4"></icon>
-                        </div>
-                    </a>
-                </div>
             </td>
         </tr>
     {% endfor %}
