--- a/templates/user/invoice/show.html.twig
+++ b/templates/user/invoice/show.html.twig
@@ -30,7 +30,7 @@
 
     <div class="w-full flex">
         <div class="w-1/4 text-xs text-gray-500">
-            Montant HT
+            Montant TTC
         </div>
         <div class="flex-1">
             {{ invoice.amountTtc }} €
