--- a/templates/user/service/index.html.twig
+++ b/templates/user/service/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block page_header %}
     <p class="text-2xl font-bold">Prestations</p>
+    <div class="flex gap-3">
+        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
+    </div>
 {% endblock %}
 
 {% block thead %}
