--- a/templates/admin/default/sheet.html.twig
+++ b/templates/admin/default/sheet.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block page_content %}
-    <div id="sheet" class="w-full overflow-y-auto flex flex-col gap-y-2 text-sm m-6">
+    <div id="sheet" class="w-full flex flex-col gap-y-2 text-sm m-6">
         {% block sheet %}{% endblock %}
     </div>
 {% endblock %}
