--- a/templates/admin/quotation/show.html.twig
+++ b/templates/admin/quotation/show.html.twig
@@ -1,28 +1,232 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/sheet.html.twig' %}
 
-{% block page_title %}Détails du devis{% endblock %}
+{% block page_title %}Fiche devis - ArtBill{% endblock %}
 
-{% block page_content %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Fiche devis</p>
+   
+{% endblock %}
 
-<h1>Détails du devis</h1>
+{% set today = "now"|date('Y-m-d') %}
 
-{% include "_partials/_bills.show.html.twig" with {'item':quotation, 'type':"quotation"} %}</br>
+{% block sheet %}
+    <p class="text-lg font-bold mb-1">Informations</p>
 
-{% if previousVersions %}
-    <h2>Version précédentes:</h2>
-    {% for previousVersion in previousVersions %}
-        {% include "_partials/_bills.show.html.twig" with {'item':previousVersion, 'type':"quotation"} %}
-    {% endfor %}
-{% endif %}
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Description
+        </div>
+        <div class="flex-1">
+            {{ quotation.description }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Montant HT
+        </div>
+        <div class="flex-1">
+            {{ quotation.amountHt }} €
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Montant TTC
+        </div>
+        <div class="flex-1">
+            {{ quotation.amountTtc }} €
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date
+        </div>
+        <div class="flex-1">
+            {{ quotation.date ? quotation.date|date('Y-m-d') : '' }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date d'échéance
+        </div>
+        <div class="flex-1">
+            {{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}
+        </div>
+    </div>
+
+	{% if quotation.services %}
+		<div class="w-full flex">
+			<div class="w-1/4 text-xs text-gray-500">
+				Prestations
+			</div>
+			<div class="flex-1">
+				{% for service in quotation.services %}
+					{{ service.label }}: {{ service.price }}€ x {{ service.quantity }}
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Taux TVA 0%
+        </div>
+        <div class="flex-1">
+            {{ quotation.baseVatRate0 }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Taux TVA 10%
+        </div>
+        <div class="flex-1">
+            {{ quotation.vatRate10 }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Base TVA 10%
+        </div>
+        <div class="flex-1">
+            {{ quotation.baseVatRate10 }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Taux TVA 20%
+        </div>
+        <div class="flex-1">
+            {{ quotation.vatRate20 }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Base TVA 20%
+        </div>
+        <div class="flex-1">
+            {{ quotation.baseVatRate20 }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date et heure de création
+        </div>
+        <div class="flex-1">
+            {{ quotation.createdAt|date('d/m/Y à H') }}h{{ quotation.createdAt|date('i') }}
+        </div>
+    </div>
 </br>
 
-{% if nextVersions %}
-    <h2>Version suivantes:</h2>
-    {% for nextVersion in nextVersions %}
-        {% include "_partials/_bills.show.html.twig" with {'item':nextVersion, 'type':"quotation"} %}
-    {% endfor %}
+{% if previousVersions is not empty %}
+    <p class="text-lg font-bold mb-1">Versions précédentes: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date du devis</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for quotation in previousVersions %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ quotation.description }}</td>
+                    <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ quotation.status }}</td>
+                    <td>
+                        {% if today == quotation.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ quotation.createdAt|date('d/m/Y') }}
+                        {% endif %}
+
+                        à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endif %}
-          
+    
+{% if nextVersions is not empty %}
+    <p class="text-lg font-bold mb-1">Versions suivantes: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date du devis</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for quotation in nextVersions %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ quotation.description }}</td>
+                    <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ quotation.status }}</td>
+                    <td>
+                        {% if today == quotation.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ quotation.createdAt|date('d/m/Y') }}
+                        {% endif %}
+
+                        à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
+    
 <a href="{{ path('admin_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a>
 <a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
 <a href="{{ path('generate_pdf', {'id': quotation.id, 'type': 'devis'}) }}" target="_blank">Générer PDF</a>
