--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
     {% endblock %}
 </head>
 
+{% set today = "now"|date('Y-m-d') %}
+
 <body class="flex overflow-hidden">
     {% block initializer %}
         <div class="init w-5 h-5"></div>
@@ -101,15 +103,18 @@
                 </ul>
 
                 <ul class="flex flex-col p-3 mt-auto">
-                    <a href="{{ '/' ~ role_prefix ~ '/register' }}">
-                        <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
-                            <div class="flex items-center gap-2">
-                                <icon name="users"></icon>
-                                <span>Ajouter un membre</span>
-                            </div>
-                        </li>
-                    </a>
-                    <a href="{{ '/' ~ role_prefix ~ '/settings' }}">
+					{% if is_granted('ROLE_SUPERADMIN') or is_granted('ROLE_ADMIN') %}
+                        <a href="{{ '/' ~ role_prefix ~ '/register' }}">
+                            <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
+                                <div class="flex items-center gap-2">
+                                    <icon name="users"></icon>
+                                    <span>Ajouter un membre</span>
+                                </div>
+                            </li>
+                        </a>
+                    {% endif %}
+                    {# <a href="{{ '/' ~ role_prefix ~ '/settings' }}"> #}
+                    <a href="#">
                         <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
                             <div class="flex items-center gap-2">
                                 <icon name="cog-6-tooth"></icon>
