--- a/templates/user/category/show.html.twig
+++ b/templates/user/category/show.html.twig
@@ -1,30 +1,29 @@
-{% extends 'base.html.twig' %}
+{% extends 'user/default/sheet.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block page_title %}Fiche catégorie de prestation - ArtBill{% endblock %}
 
-{% block page_content %}
-    <h1>Category</h1>
+{% block page_header %}
+    <p class="text-2xl font-bold">Fiche catégorie de prestation</p>
+{% endblock %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Label</th>
-                <td>{{ category.label }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{{ category.created ? category.created|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block sheet %}
+    <p class="text-lg font-bold mb-1">Informations</p>
 
-    <a href="{{ path('user_app_category_index') }}">back to list</a>
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Libellé
+        </div>
+        <div class="flex-1">
+            {{ category.label }}
+        </div>
+    </div>
 
-    <a href="{{ path('user_app_category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('user/category/_delete_form.html.twig') }}
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date et heure de création
+        </div>
+        <div class="flex-1">
+            {{ category.createdAt|date('d/m/Y à H') }}h{{ category.createdAt|date('i') }}
+        </div>
+    </div>
 {% endblock %}
