--- a/templates/user/customer/index.html.twig
+++ b/templates/user/customer/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/default/list.html.twig' %}
+{% extends 'user/default/list.html.twig' %}
 
 {% block page_title %}Clients{% endblock %}
 
@@ -6,11 +6,6 @@
     <p class="text-2xl font-bold">Clients</p>
     <div class="flex gap-3">
         <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
-        <a href="{{ path('admin_customer_new') }}" title="Ajouter">
-            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
-                <icon name="plus" display="mini" color="white"></icon>
-            </div>
-        </a>
     </div>
 {% endblock %}
 
@@ -29,11 +24,11 @@
     {% for customer in customers %}
         <tr>
             <td class="w-10 h-12">
-                <a href="{{ path('admin_customer_show', {'id': customer.id}) }}" title="Voir">
+                <a href="{{ path('user_customer_show', {'id': customer.id}) }}" title="Voir">
                     <icon name="eye" display="solid" color="primary" size="4"></icon>
                 </a>
             </td>
-            <td><a class="font-bold text-primary" href="{{ path('admin_customer_show', {'id': customer.id}) }}">{{ customer.name }}</a></td>
+            <td><a class="font-bold text-primary" href="{{ path('user_customer_show', {'id': customer.id}) }}">{{ customer.name }}</a></td>
             <td>{{ customer.email }}</td>
             <td>
                 {% if today == customer.createdAt|date('Y-m-d') %}
@@ -47,19 +42,6 @@
                 à {{ customer.createdAt|date('H') }}h{{ customer.createdAt|date('i') }}
             </td>
             <td>
-                <div class="flex justify-end gap-3">
-                    <a href="{{ path('admin_customer_edit', {'id': customer.id}) }}">
-                        <div class="h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md px-2.5 p-1 bg-primary text-white">
-                            <icon name="pencil" display="solid" color="white" size="4"></icon>
-                            <span>Modifier</span>
-                        </div>
-                    </a>
-                    <a href="{{ path('admin_customer_delete', {'id': customer.id}) }}">
-                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
-                            <icon name="trash" display="solid" color="primary" size="4"></icon>
-                        </div>
-                    </a>
-                </div>
             </td>
         </tr>
     {% endfor %}
