--- a/templates/user/customer/show.html.twig
+++ b/templates/user/customer/show.html.twig
@@ -1,22 +1,124 @@
-{% extends 'base.html.twig' %}
-{% block title %}Client
-	{{ customer.name }}
+{% extends 'user/default/sheet.html.twig' %}
+
+{% block page_title %}Fiche client - ArtBill{% endblock %}
+
+{% block page_header %}
+    <p class="text-2xl font-bold">Fiche client</p>
 {% endblock %}
-{% block page_content %}
-	<div class="container mx-auto my-8">
-		<h1 class="text-4xl font-bold mb-6">Client
-			{{ customer.name }}</h1>
-		<p class="mb-4">{{ customer.email }}</p>
-		<p class="mb-4">{{ customer.street }},
-			{{ customer.city }},
-			{{ customer.getZipCode() }},
-			{{ customer.country }}</p>
-		<h2>Devis</h2>
-		<br>
-		{% if quotations %}
-			{% include '_partials/_bills.index.html.twig' with {'items': quotations, type:"quotation"}%}
-		{% endif %}
-		<br>
-		<a href="{{ path('user_customer_update', {'id': customer.id}) }}" class="btn btn-primary">Modifier</a>
-	</div>
+
+{% block sheet %}
+    <p class="text-lg font-bold mb-1">Informations</p>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Nom
+        </div>
+        <div class="flex-1">
+            {{ customer.name }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            E-mail
+        </div>
+        <div class="flex-1">
+            {{ customer.email }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Rue
+        </div>
+        <div class="flex-1">
+            {{ customer.street }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Ville
+        </div>
+        <div class="flex-1">
+            {{ customer.city }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Code postal
+        </div>
+        <div class="flex-1">
+            {{ customer.getZipCode() }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Pays
+        </div>
+        <div class="flex-1">
+            {{ customer.country }}
+        </div>
+    </div>
+
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date et heure de création
+        </div>
+        <div class="flex-1">
+            {{ customer.createdAt|date('d/m/Y à H') }}h{{ customer.createdAt|date('i') }}
+        </div>
+    </div>
+	{% if quotations is not empty %}
+    <p class="text-lg font-bold mb-1">Devis liés: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date du devis</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for quotation in quotations %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('user_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ quotation.description }}</td>
+                    <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ quotation.status }}</td>
+                    <td>
+                        {% if today == quotation.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ quotation.createdAt|date('d/m/Y') }}
+                        {% endif %}
+
+                        à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+	{% endif %}
 {% endblock %}
