--- a/templates/superadmin/quotation/show.html.twig
+++ b/templates/superadmin/quotation/show.html.twig
@@ -4,7 +4,17 @@
 
 {% block page_header %}
     <p class="text-2xl font-bold">Fiche devis</p>
-   
+    <div class="flex justify-end gap-3 text-sm">
+        <a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}">
+            <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+                <icon name="pencil" display="solid" color="white" size="4"></icon>
+                <span>Modifier</span>
+            </div>
+        </a>
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-red-500 text-white">
+            {{ include('superadmin/quotation/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
 
 {% set today = "now"|date('Y-m-d') %}
@@ -228,10 +238,8 @@
 {% endif %}
     
 <a href="{{ path('superadmin_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a>
-<a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
 <a href="{{ path('generate_pdf', {'id': quotation.id, 'type': 'devis'}) }}" target="_blank">Générer PDF</a>
 <a href="{{ path('superadmin_quotation_generate_invoice', {'id': quotation.id}) }}" class="btn btn-primary">Générer la facture à partir du devis</a>
-{{ include('superadmin/quotation/_delete_form.html.twig') }}
 
 <button id="togglePreview">Afficher la prévisualisation</button>
 
