--- a/templates/admin/archive.html.twig
+++ b/templates/admin/archive.html.twig
@@ -1,12 +1,118 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/list.html.twig' %}
 
-{% block title %}
-    Archives
+{% block page_title %}Archivage{% endblock %}
+
+{% block page_header %}
+    <p class="text-2xl font-bold">Devis</p>
+    <div class="flex gap-3">
+        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
+        <a href="{{ path('admin_quotation_new') }}" title="Ajouter">
+            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
+                <icon name="plus" display="mini" color="white"></icon>
+            </div>
+        </a>
+    </div>
 {% endblock %}
 
 {% block page_content %}
-	<h1>Factures archivées</h1>
-	{% include '_partials/_bills.index.html.twig' with {'items': invoices, 'type': "invoice"}%}
-	<h1>Devis archivées</h1>
-	{% include '_partials/_bills.index.html.twig' with {'items': quotations, 'type': "quotation"}%}
+	{% if quotations is not empty %}
+    <p class="text-lg font-bold mb-1">Devis archivés: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date du devis</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for quotation in quotations %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ quotation.description }}</td>
+                    <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ quotation.status }}</td>
+                    <td>
+                        {% if today == quotation.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ quotation.createdAt|date('d/m/Y') }}
+                        {% endif %}
+
+                        à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+	{% endif %}
+	{% if invoices is not empty %}
+    <p class="text-lg font-bold mb-1">Factures archivées: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date de la facture</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for invoice in invoices %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('admin_invoice_show', {'id': invoice.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ invoice.description }}</td>
+                    <td>{{ invoice.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ invoice.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ invoice.date ? invoice.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ invoice.dueDate ? invoice.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ invoice.status }}</td>
+                    <td>
+                        {% if today == invoice.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == invoice.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ invoice.createdAt|date('d/m/Y') }}
+                        {% endif %}
+
+                        à {{ invoice.createdAt|date('H') }}h{{ invoice.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+	{% endif %}
 {% endblock %}
