--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -53,11 +53,9 @@
                             <span>Modifier</span>
                         </div>
                     </a>
-                    <a href="{{ path('admin_category_delete', {'id': category.id}) }}">
-                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
-                            <icon name="trash" display="solid" color="primary" size="4"></icon>
-                        </div>
-                    </a>
+                    <div class="w-8 h-8 flex justify-center items-center gap-1.5 border bg-red-500 shadow-sm rounded-md py-1">
+                        {{ include('admin/category/_delete_form.html.twig') }}
+                    </div>
                 </div>
             </td>
         </tr>
