--- a/templates/admin/customer/show.html.twig
+++ b/templates/admin/customer/show.html.twig
@@ -11,12 +11,9 @@
                 <span>Modifier</span>
             </div>
         </a>
-        <a href="{{ path('admin_customer_delete', {'id': customer.id}) }}">
-            <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-red-500 text-white">
-                <icon name="trash" display="solid" color="white" size="4"></icon>
-                <span>Supprimer</span>
-            </div>
-        </a>
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-red-500 text-white">
+            {{ include('admin/customer/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
 
@@ -85,8 +82,54 @@
             {{ customer.createdAt|date('d/m/Y à H') }}h{{ customer.createdAt|date('i') }}
         </div>
     </div>
+    {% if quotations is not empty %}
+    <p class="text-lg font-bold mb-1">Devis liés: </p>
+    <div id="list" class="w-full px-6 mt-6 overflow-y-auto">
+        <table class="table-auto w-full text-sm text-left">
+            <thead class="sticky top-0 z-10 bg-white text-xs text-gray-500">
+                <tr>
+                    <th></th>
+                    <th>Description</th>
+                    <th>Montant HT</th>
+                    <th>Montant TTC</th>
+                    <th>Date du devis</th>
+                    <th>Date d'échéance</th>
+                    <th>Statut</th>
+                    <th>Création</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for quotation in quotations %}
+                <tr>
+                    <td class="w-10 h-12">
+                        <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                            <icon name="eye" display="solid" color="primary" size="4"></icon>
+                        </a>
+                    </td>
+                    <td>{{ quotation.description }}</td>
+                    <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+                    <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ quotation.status }}</td>
+                    <td>
+                        {% if today == quotation.createdAt|date('Y-m-d') %}
+                            Aujourd'hui
+                        {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                            Hier
+                        {% else %}
+                            {{ quotation.createdAt|date('d/m/Y') }}
+                        {% endif %}
 
-    {% if quotations %}
-        {% include '_partials/_bills.index.html.twig' with {'items': quotations, 'type': "quotation" }%}
-    {% endif %}
+                        à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+	{% endif %}
 {% endblock %}
