--- a/templates/admin/invoice/index.html.twig
+++ b/templates/admin/invoice/index.html.twig
@@ -63,11 +63,9 @@
                             <span>Modifier</span>
                         </div>
                     </a>
-                    <a href="{{ path('admin_invoice_delete', {'id': invoice.id}) }}">
-                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
-                            <icon name="trash" display="solid" color="primary" size="4"></icon>
-                        </div>
-                    </a>
+                    <div class="w-8 h-8 flex justify-center items-center gap-1.5 border bg-red-500 shadow-sm rounded-md py-1">
+                        {{ include('admin/invoice/_delete_form.html.twig') }}
+                    </div>
                 </div>
             </td>
         </tr>
