refacto front admin service edit + add

--- a/templates/admin/service/edit.html.twig
+++ b/templates/admin/service/edit.html.twig
@@ -18,6 +18,7 @@
         'price': 'Prix',
         'vat_rate': 'Taux de TVA',
         'category': 'Catégorie',
+        'quantity': 'Quantité',
     } %}
 
     {% for field, label in fields %}
