--- a/templates/admin/quotation/_delete_form.html.twig
+++ b/templates/admin/quotation/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('admin_quotation_delete', {'id': quotation.id}) }}" onsubmit="return confirm('Voulez vous vraiment archiver ce devis ?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quotation.id) }}">
-    <button class="btn">Archiver</button>
+	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quotation.id) }}">
+    <button class="btn"><icon name="trash" display="solid" color="white" size="4"></icon></button>
 </form>
