--- a/templates/superadmin/customer/edit.html.twig
+++ b/templates/superadmin/customer/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'admin/default/form.html.twig' %}
+{% extends 'superadmin/default/form.html.twig' %}
 
-{% block page_title %}Modifier une facture - ArtBill{% endblock %}
+{% block page_title %}Modifier un client - ArtBill{% endblock %}
 {% block page_header %}
-    <p class="text-2xl font-bold">Modifier une facture</p>
+    <p class="text-2xl font-bold">Modifier un client</p>
     <div class="flex justify-end gap-3 text-sm">
         <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
             <icon name="check" display="solid" color="white" size="4"></icon>
@@ -13,11 +13,12 @@
 
 {% block form %}
     {% set fields = {
-        'description': 'Description',
-        'date': 'Date',
-        'dueDate': 'Date d\'échéance',
-        'customer': 'Client',
-		'isPaid': 'Payé',
+        'name': 'Nom',
+        'email': 'E-mail',
+        'street': 'Rue',
+        'city': 'Ville',
+        'zip_code': 'Code postal',
+        'country': 'Pays',
     } %}
 
     {% for field, label in fields %}
@@ -27,8 +28,4 @@
             {{ form_errors(form[field]) }}
         </div>
     {% endfor %}
-{% endblock %}
-
-{% block form_extra %}
-    {{ include('superadmin/invoice/_service_form.html.twig') }}
 {% endblock %}
